crates/replique/tests/snapshots/corpus__else_branch.snap
---
source: crates/replique/tests/corpus.rs
expression: "render(& src, & parsed)"
---
== nodes ==
node start
  set gold "0" @2:1 "[let $gold = 0]"
  if-group @3:1 "[if $gold > 5]\n    Alice: Je suis riche.\n[elif $gold > 0]\n    Alice: J'ai trois sous.\n[else]\n    Alice: J'ai pas d'argent."
    branch "$gold > 5" @3:1 "[if $gold > 5]\n    Alice: Je suis riche."
      line Alice "Je suis riche." @4:5 "Alice: Je suis riche."
    branch "$gold > 0" @5:1 "[elif $gold > 0]\n    Alice: J'ai trois sous."
      line Alice "J'ai trois sous." @6:5 "Alice: J'ai trois sous."
    else
      line Alice "J'ai pas d'argent." @8:5 "Alice: J'ai pas d'argent."
  command show ["$gold"] @9:4 "show($gold)"

== diagnostics ==
(none)
