crates/replique/tests/snapshots/corpus__empty_node.snap
---
source: crates/replique/tests/corpus.rs
expression: "render(& src, & parsed)"
---
== nodes ==
node start

== diagnostics ==
warning empty-node @1:1 ":= start"
