crates/replique/tests/snapshots/corpus__forward_jump.snap
---
source: crates/replique/tests/corpus.rs
expression: "render(& src, & parsed)"
---
== nodes ==
node start
  jump meeting @2:1 "=> meeting"
node meeting
  line Alice "On y va." @6:1 "Alice: On y va."

== diagnostics ==
(none)
